--- a/posts/index.org
+++ b/posts/index.org
@@ -155,11 +155,11 @@ In my previous post on [[covid-19][COVID-19]] I predicted that mid April we woul
 The [[https://www.tweedekamer.nl/sites/default/files/atoms/files/tech_briefing_1_apr_2020_gommers.pdf][message]] from the [[https://nvic.nl/][Dutch Association for Intensive Care]] was less optimistic: they were expecting to need 2500 IC beds by the end of May.
 
 [[https://nos.nl/data/image/2020/04/04/641321/1280x720a.jpg]]
-The most telling statistics at this point to me are that today's [[https://nos.nl/artikel/2329478-de-coronacijfers-van-5-april-nieuwe-ziekenhuisopnames-laagste-in-twee-weken.html][number of new hospital admissions]] was the lowest in two weeks and the peek was on March 31. Also, in Belgium [[https://nos.nl/liveblog/2329431-rivm-115-nieuwe-sterfgevallen-drukte-in-natuur-lijkt-opnieuw-mee-te-vallen#UPDATE-container-44494253][today]] more corona-patients left the hospital than entered (granted, Belgium is not Holland, but still). Yesterday's statistics already show the growth of IC admissions slowing down. With this trend it would seem that the current capacity of 1900 will be more than sufficient, and the feared 2500 seem unlikely. The latest [[https://nos.nl/liveblog/2329431-instroom-op-intensive-care-vlakt-af-doelstelling-ic-bedden-gehaald][news]] from the national coordination centre seems to confirm this.
+The most telling statistics at this point to me are that today's [[https://nos.nl/artikel/2329478-de-coronacijfers-van-5-april-nieuwe-ziekenhuisopnames-laagste-in-twee-weken.html][number of new hospital admissions]] was the lowest in two weeks and the peek was on March 31. Also, in Belgium [[https://nos.nl/liveblog/2329431-rivm-115-nieuwe-sterfgevallen-drukte-in-natuur-lijkt-opnieuw-mee-te-vallen#UPDATE-container-44494253][today]] more corona-patients left the hospital than entered (granted, Belgium is not Holland, but still). [[https://nos.nl/artikel/2329389-de-coronacijfers-van-4-april-minder-nieuwe-ziekenhuis-en-ic-opnames.html][Yesterday's]] statistics already show the growth of IC admissions slowing down. With this trend it would seem that the current capacity of 1900 will be more than sufficient, and the feared 2500 seem unlikely. The latest [[https://nos.nl/liveblog/2329431-instroom-op-intensive-care-vlakt-af-doelstelling-ic-bedden-gehaald][news]] from the national coordination centre seems to confirm this.
 
-So, the question is when and how will we turn from [[https://www.nd.nl/nieuws/varia/961390/rutte-grootste-crisis-in-vredestijd-sinds-woii][this is the biggest disaster since WWII]] to "let's be reasonable about this". Politicians and policy makers cannot change their minds, without serious repercussions for their credibility and careers. So, this needs to be spinned carefully.
+So, the question is when and how will we turn from [[https://www.nd.nl/nieuws/varia/961390/rutte-grootste-crisis-in-vredestijd-sinds-woii][this is the biggest disaster since WWII]] to "let's be reasonable about this". Politicians and policy makers cannot change their minds, without serious repercussions for their credibility and careers. Also, sudden changes in policy may lead to social unrest. So, this needs to be spinned carefully.
 
-I think the /when/ cannot be far away, because the [[ https://www.lastampa.it/cronaca/2020/04/03/news/esce-il-sole-strade-e-piazze-affollate-con-la-scusa-della-spesa-1.38674825][situation]] in Italy shows there's an end to how long people will endure a lock-down. So I expect within two weeks from now the pressure will be rising, when it becomes clear that hundreds of IC-beds are remaining empty. By then more [[https://nos.nl/nieuwsuur/artikel/2329144-sterftecijfers-moeten-die-elke-dag-zo-expliciet-in-het-nieuws.html][critical]] messages will become more acceptable and more main stream. The media will more and more start to question the wisdom of the current lock-down. But it is not politically viable to change tack before the end of the current measures on April 28.
+I think the /when/ cannot be far away, because the [[ https://www.lastampa.it/cronaca/2020/04/03/news/esce-il-sole-strade-e-piazze-affollate-con-la-scusa-della-spesa-1.38674825][situation]] in Italy shows there's an end to how long people will endure a lock-down. So I expect the coming two weeks the pressure will rise. For example, when it becomes clear that hundreds of IC-beds are remaining empty. Gradually, more [[https://nos.nl/nieuwsuur/artikel/2329144-sterftecijfers-moeten-die-elke-dag-zo-expliciet-in-het-nieuws.html][critical]] messages will become more acceptable and more main stream. The media will more and more start to question the wisdom of the current lock-down. But it is not politically viable to change tack before the end of the current measures on April 28.
 
 The /how/ is trickier, but I expect the tone will be "now we've brought COVID-19 successfully under control, we need to turn our attention to the economy". Look at [[https://nos.nl/liveblog/2329431-instroom-op-intensive-care-vlakt-af-doelstelling-ic-bedden-gehaald][how]] the possible over-capacity of IC beds is presented: "target achieved". I expect the common sense measures (wash you hands, reduce social contacts) will remain in place for some time, but the economy-killing measures like closing schools and the catering and entertainment industries will be reduced gradually by the end of the month. The [[https://www.rtlnieuws.nl/nieuws/politiek/artikel/5081496/ondernemersvoorman-meivakantie-hans-de-boer-vno-ncw-corona-gas][first signs]] are already there by the call of the Dutch entrepreneurs association [[https://www.vno-ncw.nl/][VNO-NCW]] to speed up after the May holidays.
 
